update login feature test

--- a/test-output/report.html
+++ b/test-output/report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 16, 2024 06:42:49 AM</span></a>
+<a href="#"><span class="badge badge-primary">May 16, 2024 07:34:44 AM</span></a>
 </li>
 </ul>
 </div>
@@ -97,7 +97,7 @@
           <div class="test-detail">
             <p class="name">Login</p>
             <p class="text-sm">
-              <span>6:42:49 AM</span> / <span>00:00:18:466</span>
+              <span>7:34:44 AM</span> / <span>00:00:19:043</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -106,9 +106,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">Login</h5>
-<span class='badge badge-success'>05.16.2024 6:42:49 AM</span>
-<span class='badge badge-danger'>05.16.2024 6:43:08 AM</span>
-<span class='badge badge-default'>00:00:18:466</span>
+<span class='badge badge-success'>05.16.2024 7:34:44 AM</span>
+<span class='badge badge-danger'>05.16.2024 7:35:03 AM</span>
+<span class='badge badge-default'>00:00:19:043</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -135,8 +135,13 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "standard_user" dan password "secret_sauce"</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username(java.lang.String)">
+                <span>When pengguna mengisi username "standard_user"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_password(java.lang.String)">
+                <span>And pengguna mengisi password "secret_sauce"</span>
       <div>
       </div>
               </div>
@@ -156,7 +161,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="11"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username yang terdaftar pada sistem dan password yang tidak terdaftar pada sistem</div>
+        <div class="node" id="12"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username yang terdaftar pada sistem dan password yang tidak terdaftar pada sistem</div>
       </div>
     </div>
         <div class="collapse">
@@ -171,8 +176,13 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "standard_user" dan password "cinderella"</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username(java.lang.String)">
+                <span>When pengguna mengisi username "standard_user"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_password(java.lang.String)">
+                <span>And pengguna mengisi password "cinderella"</span>
       <div>
       </div>
               </div>
@@ -192,7 +202,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="20"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan password yang terdaftar pada sistem dan username yang tidak terdaftar pada sistem</div>
+        <div class="node" id="22"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan password yang terdaftar pada sistem dan username yang tidak terdaftar pada sistem</div>
       </div>
     </div>
         <div class="collapse">
@@ -207,8 +217,13 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "cinderella" dan password "secret_sauce"</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username(java.lang.String)">
+                <span>When pengguna mengisi username "cinderella"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_password(java.lang.String)">
+                <span>And pengguna mengisi password "secret_sauce"</span>
       <div>
       </div>
               </div>
@@ -228,7 +243,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="29"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username dan password yang tidak terdaftar pada sistem</div>
+        <div class="node" id="32"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username dan password yang tidak terdaftar pada sistem</div>
       </div>
     </div>
         <div class="collapse">
@@ -243,8 +258,13 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "cinderella" dan password "boo"</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username(java.lang.String)">
+                <span>When pengguna mengisi username "cinderella"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_password(java.lang.String)">
+                <span>And pengguna mengisi password "boo"</span>
       <div>
       </div>
               </div>
@@ -264,7 +284,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="38"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username yang terdaftar pada sistem dan password kosong</div>
+        <div class="node" id="42"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username yang terdaftar pada sistem dan password kosong</div>
       </div>
     </div>
         <div class="collapse">
@@ -279,8 +299,8 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "standard_user" dan password ""</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username(java.lang.String)">
+                <span>When pengguna mengisi username "standard_user"</span>
       <div>
       </div>
               </div>
@@ -300,7 +320,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="47"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username yang tidak terdaftar pada sistem dan password kosong</div>
+        <div class="node" id="51"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan username yang tidak terdaftar pada sistem dan password kosong</div>
       </div>
     </div>
         <div class="collapse">
@@ -315,8 +335,8 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "cinderella" dan password ""</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username(java.lang.String)">
+                <span>When pengguna mengisi username "cinderella"</span>
       <div>
       </div>
               </div>
@@ -336,7 +356,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="56"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan password yang terdaftar pada sistem dan username kosong</div>
+        <div class="node" id="60"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan password yang terdaftar pada sistem dan username kosong</div>
       </div>
     </div>
         <div class="collapse">
@@ -351,8 +371,8 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "" dan password "secret_sauce"</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_password(java.lang.String)">
+                <span>When pengguna mengisi password "secret_sauce"</span>
       <div>
       </div>
               </div>
@@ -372,7 +392,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="65"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan password yang tidak terdaftar pada sistem dan username kosong</div>
+        <div class="node" id="69"><span class="badge log pass-bg mr-2">Pass</span>Login menggunakan password yang tidak terdaftar pada sistem dan username kosong</div>
       </div>
     </div>
         <div class="collapse">
@@ -387,8 +407,8 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_username_and_password(java.lang.String,java.lang.String)">
-                <span>When pengguna mengisi username "" dan password "boo"</span>
+              <div class="step pass-bg" title="com.a1.webtesting.stepdefinitions.LoginSteps.user_enter_password(java.lang.String)">
+                <span>When pengguna mengisi password "boo"</span>
       <div>
       </div>
               </div>
@@ -408,7 +428,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="74"><span class="badge log fail-bg mr-2">Fail</span>Login dengan username dan password kosong</div>
+        <div class="node" id="78"><span class="badge log fail-bg mr-2">Fail</span>Login dengan username dan password kosong</div>
           <div class="status-avatar float-right mr-4">
             <i class="fa fa-paperclip"></i>
           </div>
@@ -438,8 +458,8 @@
 	at org.junit.Assert.fail(Assert.java:87)
 	at org.junit.Assert.assertTrue(Assert.java:42)
 	at org.junit.Assert.assertTrue(Assert.java:53)
-	at com.a1.webtesting.stepdefinitions.LoginSteps.user_login_failed_and_show_error_message(LoginSteps.java:46)
-	at ✽.pengguna gagal melakukan login dan terdapat error message "Username and Password is required"(file:///D:/Kuliah/Semester-6/Pengujian%20Perangkat%20Lunak/web-testing/src/test/resources/features/login.feature:65)
+	at com.a1.webtesting.stepdefinitions.LoginSteps.user_login_failed_and_show_error_message(LoginSteps.java:50)
+	at ✽.pengguna gagal melakukan login dan terdapat error message "Username and Password is required"(file:///D:/Kuliah/Semester-6/Pengujian%20Perangkat%20Lunak/web-testing/src/test/resources/features/login.feature:69)
 </textarea>
       
       </div>
@@ -502,9 +522,9 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>06:43:08 AM</td>
+<td>07:35:03 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='79'>Then pengguna gagal melakukan login dan terdapat error message "Username and Password is required"</a>
+<a href="#" class="linked" test-id='1' id='83'>Then pengguna gagal melakukan login dan terdapat error message "Username and Password is required"</a>
 <div class="">
 <span class="badge badge-default">Login.Login dengan username dan password kosong.Then pengguna gagal melakukan login dan terdapat error message "Username and Password is required"</span>
 </div>
@@ -556,7 +576,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:42:49 AM</td>
+<td>07:34:44 AM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Login menggunakan username dan password yang terdaftar pada sistem</a>
 <div class="">
@@ -566,9 +586,9 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:42:52 AM</td>
+<td>07:34:48 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='11'>Login menggunakan username yang terdaftar pada sistem dan password yang tidak terdaftar pada sistem</a>
+<a href="#" class="linked" test-id='1' id='12'>Login menggunakan username yang terdaftar pada sistem dan password yang tidak terdaftar pada sistem</a>
 <div class="">
 <span class="badge badge-default">Login.Login menggunakan username yang terdaftar pada sistem dan password yang tidak terdaftar pada sistem</span>
 </div>
@@ -576,9 +596,9 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:42:54 AM</td>
+<td>07:34:51 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='20'>Login menggunakan password yang terdaftar pada sistem dan username yang tidak terdaftar pada sistem</a>
+<a href="#" class="linked" test-id='1' id='22'>Login menggunakan password yang terdaftar pada sistem dan username yang tidak terdaftar pada sistem</a>
 <div class="">
 <span class="badge badge-default">Login.Login menggunakan password yang terdaftar pada sistem dan username yang tidak terdaftar pada sistem</span>
 </div>
@@ -586,9 +606,9 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:42:56 AM</td>
+<td>07:34:52 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='29'>Login menggunakan username dan password yang tidak terdaftar pada sistem</a>
+<a href="#" class="linked" test-id='1' id='32'>Login menggunakan username dan password yang tidak terdaftar pada sistem</a>
 <div class="">
 <span class="badge badge-default">Login.Login menggunakan username dan password yang tidak terdaftar pada sistem</span>
 </div>
@@ -596,9 +616,9 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:42:57 AM</td>
+<td>07:34:54 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='38'>Login menggunakan username yang terdaftar pada sistem dan password kosong</a>
+<a href="#" class="linked" test-id='1' id='42'>Login menggunakan username yang terdaftar pada sistem dan password kosong</a>
 <div class="">
 <span class="badge badge-default">Login.Login menggunakan username yang terdaftar pada sistem dan password kosong</span>
 </div>
@@ -606,9 +626,9 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:43:00 AM</td>
+<td>07:34:57 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='47'>Login menggunakan username yang tidak terdaftar pada sistem dan password kosong</a>
+<a href="#" class="linked" test-id='1' id='51'>Login menggunakan username yang tidak terdaftar pada sistem dan password kosong</a>
 <div class="">
 <span class="badge badge-default">Login.Login menggunakan username yang tidak terdaftar pada sistem dan password kosong</span>
 </div>
@@ -616,9 +636,9 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:43:02 AM</td>
+<td>07:34:58 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='56'>Login menggunakan password yang terdaftar pada sistem dan username kosong</a>
+<a href="#" class="linked" test-id='1' id='60'>Login menggunakan password yang terdaftar pada sistem dan username kosong</a>
 <div class="">
 <span class="badge badge-default">Login.Login menggunakan password yang terdaftar pada sistem dan username kosong</span>
 </div>
@@ -626,9 +646,9 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>06:43:03 AM</td>
+<td>07:35:00 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='65'>Login menggunakan password yang tidak terdaftar pada sistem dan username kosong</a>
+<a href="#" class="linked" test-id='1' id='69'>Login menggunakan password yang tidak terdaftar pada sistem dan username kosong</a>
 <div class="">
 <span class="badge badge-default">Login.Login menggunakan password yang tidak terdaftar pada sistem dan username kosong</span>
 </div>
@@ -636,9 +656,9 @@
 </tr>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>06:43:05 AM</td>
+<td>07:35:02 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='74'>Login dengan username dan password kosong</a>
+<a href="#" class="linked" test-id='1' id='78'>Login dengan username dan password kosong</a>
 <div class="">
 <span class="badge badge-default">Login.Login dengan username dan password kosong</span>
 </div>
@@ -661,13 +681,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 16, 2024 06:42:49 AM</h3>
+<h3>May 16, 2024 07:34:44 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 16, 2024 06:43:08 AM</h3>
+<h3>May 16, 2024 07:35:03 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -738,7 +758,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='97%'><b>44</b> steps passed</small></div>
+<div><small data-tooltip='97%'><b>48</b> steps passed</small></div>
 <div>
 <small data-tooltip='2%'><b>1</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -757,7 +777,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login":18.466
+"Login":19.043
 };
 </script>
 <div class="row">
@@ -794,7 +814,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 44,
+passGrandChild: 48,
 failGrandChild: 1,
 warningGrandChild: 0,
 skipGrandChild: 0,
